--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
         "react/jsx-tag-spacing": "warn",
         "react/default-props-match-prop-types": ["error", { "allowRequiredDefaults": false }],
         "react-hooks/exhaustive-deps": "warn",
-        "no-console": "warn",
+        // "no-console": "warn",
         "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
     }
 }
